--- a/midtest/FINAL.html
+++ b/midtest/FINAL.html
@@ -65,7 +65,7 @@ a:hover {
 <nav>
 <h1>
 
-<a href="file:///C:/Users/User/Dropbox/%E6%88%91%E7%9A%84%E9%9B%BB%E8%85%A6%20(User-PC)/Desktop/kawadamakoto.github.io-main/docs/midtest/pictures.html">PHOTOS</a>
+<a href="pictures.html">PHOTOS</a>
 
 &middot;
 
